[gd_scene load_steps=3 format=2]

[ext_resource path="res://root.gd" type="Script" id=1]
[ext_resource path="res://webcam/webcam.gdns" type="Script" id=2]

[node name="root" type="Node2D"]
script = ExtResource( 1 )

[node name="webcam" type="Node" parent="."]
script = ExtResource( 2 )
auto_start = true
width = 1920
height = 1080

[node name="webcamView" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 603.0
rect_min_size = Vector2( 1920, 1080 )
expand = true

[node name="saveBtn" type="Button" parent="."]
margin_left = 1674.0
margin_top = 936.0
margin_right = 1890.0
margin_bottom = 1048.0
text = "save image to disk"
[connection signal="pressed" from="saveBtn" to="." method="_on_saveBtn_pressed"]
